--- a/.fonts.conf
+++ b/.fonts.conf
@@ -9,25 +9,49 @@
       </pattern>
     </acceptfont>
   </selectfont>
+
   <match target="font" >
-    <edit mode="assign" name="rgba" >
-      <const>rgb</const>
-    </edit>
+  <edit mode="assign" name="autohint" >
+    <bool>true</bool>
+  </edit>
   </match>
-  <match target="font" >
-    <edit mode="assign" name="hinting" >
-      <bool>true</bool>
-    </edit>
+
+  <!-- Disable Autohinting for bold fonts -->
+  <match target="font">
+  <test name="weight" compare="more">
+  <const>medium</const>
+  </test>
+  <edit name="autohint" mode="assign"><bool>false</bool></edit>
   </match>
+
   <match target="font" >
-    <edit mode="assign" name="hintstyle" >
-      <const>hintfull</const>
-    </edit>
+  <edit mode="assign" name="rgba" >
+    <const>none</const>
+  </edit>
   </match>
+
   <match target="font" >
-    <edit mode="assign" name="antialias" >
-      <bool>false</bool>
-    </edit>
+  <edit mode="assign" name="hinting" >
+    <bool>false</bool>
+  </edit>
+  </match>
+
+  <match target="font" >
+  <edit mode="assign" name="hintstyle" >
+    <const>hintnone</const>
+  </edit>
+  </match>
+
+  <match target="font" >
+  <edit mode="assign" name="antialias" >
+    <bool>true</bool>
+  </edit>
+  </match>
+
+  <match target="font" >
+  <edit mode="assign" name="dpi" >
+    <double>96</double>
+  </edit>
   </match>
 </fontconfig>
 
