--- a/.fonts.conf
+++ b/.fonts.conf
@@ -1,5 +1,6 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
+
 <fontconfig>
   <dir>/home/mwhite/.fonts</dir>
   <selectfont>
@@ -10,48 +11,177 @@
     </acceptfont>
   </selectfont>
 
-  <match target="font" >
-  <edit mode="assign" name="autohint" >
-    <bool>true</bool>
-  </edit>
-  </match>
-
-  <!-- Disable Autohinting for bold fonts -->
-  <match target="font">
-  <test name="weight" compare="more">
-  <const>medium</const>
-  </test>
-  <edit name="autohint" mode="assign"><bool>false</bool></edit>
-  </match>
-
-  <match target="font" >
-  <edit mode="assign" name="rgba" >
-    <const>none</const>
-  </edit>
-  </match>
-
-  <match target="font" >
-  <edit mode="assign" name="hinting" >
-    <bool>false</bool>
-  </edit>
-  </match>
-
-  <match target="font" >
-  <edit mode="assign" name="hintstyle" >
-    <const>hintnone</const>
-  </edit>
-  </match>
-
-  <match target="font" >
-  <edit mode="assign" name="antialias" >
-    <bool>true</bool>
-  </edit>
-  </match>
-
-  <match target="font" >
-  <edit mode="assign" name="dpi" >
-    <double>96</double>
-  </edit>
-  </match>
+    <!--     Default fonts for generic families      -->
+    <alias>
+        <family>fantasy</family>
+        <prefer>
+            <family>Comic Sans MS</family>
+            <family>URW</family>
+        </prefer>
+    </alias>
+    <alias>
+        <family>monospace</family>
+        <prefer>
+            <family>Courier New</family>
+            <family>DejaVu Sans Mono</family>
+        </prefer>
+    </alias>
+    <alias>
+        <family>sans-serif</family>
+        <prefer>
+            <family>Tahoma</family>
+            <family>Arial</family>
+            <family>DejaVu Sans Condensed</family>
+        </prefer>
+    </alias>
+    <alias>
+        <family>serif</family>
+        <prefer>
+            <family>Times New Roman</family>
+            <family>DejaVu Serif Condensed</family>
+        </prefer>
+    </alias>
+    <!--     Alias for common fonts in case they're not found        -->
+    <alias>
+        <family>Arial</family>
+        <accept><family>sans-serif</family></accept>
+    </alias>
+    <alias>
+        <family>Bitstream Vera Sans Mono</family>
+        <prefer>
+            <family>Courier New</family>
+            <family>DejaVu Sans Mono</family>
+        </prefer>
+    </alias>
+    <alias>
+        <family>Comic Sans MS</family>
+        <accept><family>URW</family></accept>
+    </alias>
+    <alias>
+        <family>Courier</family>
+        <prefer><family>monospace</family></prefer>
+    </alias>
+    <alias>
+        <family>Courier New</family>
+        <accept><family>monospace</family></accept>
+    </alias>
+    <alias>
+        <family>cursive</family>
+        <accept><family>URW</family></accept>
+    </alias>
+    <alias>
+        <family>Georgia</family>
+        <accept><family>serif</family></accept>
+    </alias>
+    <alias>
+        <family>Garamond</family>
+        <accept><family>serif</family></accept>
+    </alias>
+    <alias>
+        <family>Helvetica</family>
+        <default><family>sans-serif</family></default>
+    </alias>
+    <alias>
+        <family>Impact</family>
+        <accept><family>sans-serif</family></accept>
+    </alias>
+    <alias>
+        <family>Palatino Linotype</family>
+        <accept><family>serif</family></accept>
+    </alias>
+    <alias>
+        <family>Trebuchet MS</family>
+        <accept><family>sans-serif</family></accept>
+    </alias>
+    <alias>
+        <family>Tahoma</family>
+        <accept><family>sans-serif</family></accept>
+    </alias>
+    <alias>
+        <family>Times</family>
+        <prefer><family>Times New Roman</family></prefer>
+        <default><family>serif</family></default>
+    </alias>
+    <alias>
+        <family>Times New Roman</family>
+        <prefer><family>Times New Roman</family></prefer>
+    </alias>
+    <alias>
+        <family>Verdana</family>
+        <accept><family>sans-serif</family></accept>
+    </alias>
+    <!-- Bitstream Vera Sans is default for sans-serif. Replace it with something nicer -->
+    <alias>
+        <family>Bitstream Vera Sans</family>
+        <prefer>
+            <family>Tahoma</family>
+            <family>Arial</family>
+            <family>DejaVu Sans Condensed</family>
+        </prefer>
+    </alias>
+    <!-- Bitstream Vera Serif is default for serif. Replace it with something nicer -->
+    <alias>
+        <family>Bitstream Vera Serif</family>
+        <prefer>
+            <family>Times New Roman</family>
+            <family>DejaVu Serif Condensed</family>
+        </prefer>
+    </alias>
+    <match target="font">
+        <edit mode="assign" name="rgba"><const>rgb</const></edit>
+    </match>
+    <match target="font">
+        <edit mode="assign" name="hinting"><bool>true</bool></edit>
+    </match>
+    <match target="font">
+        <edit mode="assign" name="hintstyle"><const>hintmedium</const></edit>
+    </match>
+    <match target="font">
+        <edit mode="assign" name="antialias"><bool>true</bool></edit>
+    </match>
+    <match target="font">
+        <test compare="more_eq" name="size" qual="any" target="default"><double>-1</double></test>
+        <test compare="less_eq" name="size" qual="any" target="default"><double>15</double></test>
+        <test name="family">
+            <string>Arial</string>
+            <string>Comic Sans</string>
+            <string>Courier New</string>
+            <string>Georgia</string>
+            <string>Impact</string>
+            <string>Helvetica</string>
+            <string>Lucida Bright</string>
+            <string>Lucida Console</string>
+            <string>Lucida Sans</string>
+            <string>Microsoft Sans</string>
+            <string>Palatino Linotype</string>
+            <string>Tahoma</string>
+            <string>Ubuntu</string>
+            <string>Times New Roman</string>
+            <string>Trebuchet MS</string>
+            <string>Verdana</string>
+        </test>
+        <edit mode="assign" name="antialias"><bool>false</bool></edit>
+    </match>
+    <match target="font">
+        <test compare="less_eq" name="pixelsize" qual="any" target="default"><double>20</double></test>
+        <test name="family">
+            <string>Arial</string>
+            <string>Comic Sans</string>
+            <string>Courier New</string>
+            <string>Georgia</string>
+            <string>Impact</string>
+            <string>Helvetica</string>
+            <string>Lucida Bright</string>
+            <string>Lucida Console</string>
+            <string>Lucida Sans</string>
+            <string>Microsoft Sans</string>
+            <string>Palatino Linotype</string>
+            <string>Tahoma</string>
+            <string>Ubuntu</string>
+            <string>Times New Roman</string>
+            <string>Trebuchet MS</string>
+            <string>Verdana</string>
+        </test>
+        <edit mode="assign" name="antialias"><bool>false</bool></edit>
+    </match>
 </fontconfig>
-
