move some files, add config for GTK file chooser (used by SciTE)

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -142,7 +142,7 @@
     <match target="font">
         <test compare="more_eq" name="size" qual="any" target="default"><double>-1</double></test>
         <test compare="less_eq" name="size" qual="any" target="default"><double>15</double></test>
-        <test name="family">
+        <!-- <test name="family">
             <string>Arial</string>
             <string>Comic Sans</string>
             <string>Courier New</string>
@@ -159,12 +159,12 @@
             <string>Times New Roman</string>
             <string>Trebuchet MS</string>
             <string>Verdana</string>
-        </test>
+        </test> -->
         <edit mode="assign" name="antialias"><bool>false</bool></edit>
     </match>
     <match target="font">
         <test compare="less_eq" name="pixelsize" qual="any" target="default"><double>20</double></test>
-        <test name="family">
+        <!-- <test name="family">
             <string>Arial</string>
             <string>Comic Sans</string>
             <string>Courier New</string>
@@ -181,7 +181,7 @@
             <string>Times New Roman</string>
             <string>Trebuchet MS</string>
             <string>Verdana</string>
-        </test>
+        </test> -->
         <edit mode="assign" name="antialias"><bool>false</bool></edit>
     </match>
 </fontconfig>
