--- a/.inputrc
+++ b/.inputrc
@@ -53,18 +53,20 @@ $if mode=emacs
 "\e[A": history-search-backward
 "\e[B": history-search-forward
 
-# mappings for Ctrl-left-arrow and Ctrl-right-arrow for word moving
-"\e[1;5C": forward-word
-"\e[1;5D": backward-word
-"\e[5C": forward-word
-"\e[5D": backward-word
+# Ctrl-left-arrow and Ctrl-right-arrow - jump by whitespace
+"\e[1;5C": vi-fWord
+"\e[1;5D": vi-bWord
+"\e[5C": vi-fWord
+"\e[5D": vi-bWord
+# Alt left/right - jump by word
 "\e\e[C": forward-word
 "\e\e[D": backward-word
 
 $if term=rxvt
 "\e[8~": end-of-line
-"\eOc": forward-word
-"\eOd": backward-word
+# Ctrl left/right - use vi-fWord/bWord to jump by whitespace
+"\eOc": vi-fWord
+"\eOd": vi-bWord
 $endif
 
 # for non RH/Debian xterm, can't hurt for RH/Debian xterm
