--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -22,8 +22,10 @@
     <alias>
         <family>monospace</family>
         <prefer>
-            <family>Courier New</family>
+            <family>Menlo</family>
+            <family>Bitstream Vera Sans Mono</family>
             <family>DejaVu Sans Mono</family>
+            <family>Courier New</family>
         </prefer>
     </alias>
     <alias>
@@ -31,6 +33,7 @@
         <prefer>
             <family>Tahoma</family>
             <family>Arial</family>
+            <family>Bitstream Vera Serif</family>
             <family>DejaVu Sans Condensed</family>
         </prefer>
     </alias>
@@ -38,6 +41,7 @@
         <family>serif</family>
         <prefer>
             <family>Times New Roman</family>
+            <family>Bitstream Vera Sans</family>
             <family>DejaVu Serif Condensed</family>
         </prefer>
     </alias>
@@ -45,13 +49,6 @@
     <alias>
         <family>Arial</family>
         <accept><family>sans-serif</family></accept>
-    </alias>
-    <alias>
-        <family>Bitstream Vera Sans Mono</family>
-        <prefer>
-            <family>Courier New</family>
-            <family>DejaVu Sans Mono</family>
-        </prefer>
     </alias>
     <alias>
         <family>Comic Sans MS</family>
@@ -110,23 +107,7 @@
         <family>Verdana</family>
         <accept><family>sans-serif</family></accept>
     </alias>
-    <!-- Bitstream Vera Sans is default for sans-serif. Replace it with something nicer -->
-    <alias>
-        <family>Bitstream Vera Sans</family>
-        <prefer>
-            <family>Tahoma</family>
-            <family>Arial</family>
-            <family>DejaVu Sans Condensed</family>
-        </prefer>
-    </alias>
-    <!-- Bitstream Vera Serif is default for serif. Replace it with something nicer -->
-    <alias>
-        <family>Bitstream Vera Serif</family>
-        <prefer>
-            <family>Times New Roman</family>
-            <family>DejaVu Serif Condensed</family>
-        </prefer>
-    </alias>
+    <!-- rendering settings -->
     <match target="font">
         <edit mode="assign" name="rgba"><const>rgb</const></edit>
     </match>
@@ -134,12 +115,12 @@
         <edit mode="assign" name="hinting"><bool>true</bool></edit>
     </match>
     <match target="font">
-        <edit mode="assign" name="hintstyle"><const>hintmedium</const></edit>
+        <edit mode="assign" name="hintstyle"><const>hintslight</const></edit>
     </match>
     <match target="font">
         <edit mode="assign" name="antialias"><bool>true</bool></edit>
     </match>
-    <match target="font">
+    <!--match target="font">
         <test compare="more_eq" name="size" qual="any" target="default"><double>-1</double></test>
         <test compare="less_eq" name="size" qual="any" target="default"><double>15</double></test>
         <edit mode="assign" name="antialias"><bool>false</bool></edit>
@@ -147,5 +128,5 @@
     <match target="font">
         <test compare="less_eq" name="pixelsize" qual="any" target="default"><double>20</double></test>
         <edit mode="assign" name="antialias"><bool>false</bool></edit>
-    </match>
+    </match-->
 </fontconfig>
