updates for lastest mercurial version

--- a/.hgrc
+++ b/.hgrc
@@ -1,6 +1,8 @@
 [ui]
 username=mwhite
 merge = internal:merge
+paginate = never
+interface = curses
 
 [hostfingerprints]
 bitbucket.org = 3f:d3:c5:17:23:3c:cd:f5:2d:17:76:06:93:7e:ee:97:42:21:14:aa
@@ -9,8 +11,6 @@ bitbucket.org = 3f:d3:c5:17:23:3c:cd:f5:2d:17:76:06:93:7e:ee:97:42:21:14:aa
 rebase=
 histedit=
 shelve=
-color=
-crecord=$HOME/.hgext/crecord
 
 [alias]
 l = log --limit 10
