--- a/.config/git/config
+++ b/.config/git/config
@@ -3,23 +3,18 @@
   d = !git --no-pager diff
   dc = !git --no-pager diff --cached
   man = ls-files
-  a = add
   co = checkout
   b = branch
   ba = branch -a
   l = !git --no-pager log -n 10
-  f = fetch
-  r = reset
-  p = pull
-  pr = pull --rebase
-  ps = push
+  pullu = pull --rebase --autostash
   pf = push -f
   pom = push origin master
-  cp = cherry-pick
   up = !git fetch origin && git rebase origin/master
   retire = "!f() { git checkout master && git tag archive/$1 $1 && git branch -D $1; }; f"
   new = checkout -t origin/master -b
   amend = commit --amend
+  SS = "!f() { ARGS=`printf \"'%s' \" \"$@\"`; git submodule foreach \"git $ARGS || true\"; }; f"
 [color]
   ui = auto
 [core]
